--- a/stateParams/index.html
+++ b/stateParams/index.html
@@ -13,10 +13,14 @@
         <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
         <script src="angular/app.js"></script>
         <script src="angular/controladores.js"></script>
+        <script src="angular/controladores/tablaCtrl.js"></script>
 
         <style>
             div {
                 margin-top: 20px;
+            }
+            a {
+                padding-left: 20px;
             }
         </style>
         
