--- a/stateParams/index.html
+++ b/stateParams/index.html
@@ -14,6 +14,7 @@
         <script src="angular/app.js"></script>
         <script src="angular/controladores.js"></script>
         <script src="angular/controladores/tablaCtrl.js"></script>
+        <script src="angular/Servicios.js"></script>
 
         <style>
             div {
