--- a/stateParams/index.html
+++ b/stateParams/index.html
@@ -17,9 +17,6 @@
         <script src="angular/Servicios.js"></script>
 
         <style>
-            div {
-                margin-top: 20px;
-            }
             a {
                 padding-left: 20px;
             }
@@ -32,7 +29,9 @@
         <div class="container" ng-controller="mainCtrl">
             
             <h1>Promesas</h1>
-            <h4>Ejemplo de Promesas: {{ miVar }}</h4>
+            <h4>Ejemplo de Promesa de suma: {{ miVar }}</h4>
+            <br>
+            <h4>Ejemplo de Promesa de resta: {{ miResta }}</h4>
             <hr>
             
             <a ui-sref="main">Ir al main</a>
