--- a/stateParams/index.html
+++ b/stateParams/index.html
@@ -14,6 +14,7 @@
         <script src="angular/app.js"></script>
         <script src="angular/controladores.js"></script>
         <script src="angular/controladores/tablaCtrl.js"></script>
+        <script src="angular/controladores/pruebasJS.js"></script>
         <script src="angular/Servicios.js"></script>
 
         <style>
@@ -42,6 +43,11 @@
 
             <a ui-sref="tabla">Ir a tabla</a>
 
+            <a ui-sref="wem">Ir a textos WEM</a>
+
+            <a ui-sref="promesas2">Ir a promesas 2</a>
+
+            <a ui-sref="javascript">Ir a JavaScript</a>
 
             <div ui-view></div>           
 
